# 01_Backend/app/Http/Controllers/Api/HotelSpotController.php
@@ -1,0 +1,66 @@
+<?php
+
+namespace App\Http\Controllers\Api;
+
+use App\Http\Controllers\Controller;
+use Illuminate\Http\Request;
+use App\Constants\ResponseCodeConstant;
+use App\Repositories\HotelSpot\IHotelSpotRepository;
+
+class HotelSpotController extends Controller
+{
+    protected $hotelSpotRepository;
+
+    public function __construct(IHotelSpotRepository $hotelSpotRepository)
+    {
+        $this->hotelSpotRepository = $hotelSpotRepository;
+    }
+
+    /**
+     * Get all hotel spots
+     *  @OA\GET(
+     *      path="/hotel-spot",
+     *      tags={"Hotel spots"},
+     *      security={{"apiAuth":{}}},
+     *      description="
+     *      Code
+     *          200 - Success
+     *          400 - Bad request
+     *          401 - Not authentication
+     *          403 - Not access
+     *          422 - Input invalidate
+     *          423 - Have other error
+     *          500 - Server error
+     *      ",
+     *      @OA\Response(
+     *          response=200,
+     *          description="Result of success",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="Code", type="integer", example="200"),
+     *              @OA\Property(
+     *                  property="Data",
+     *                  description="Result of success"
+     *              )
+     *          )
+     *      )
+     *  )
+     */
+    public function index()
+    {
+        try {
+            $data_res = $this->hotelSpotRepository->getAll();
+
+            $response = response()->json([
+                'Code'         => ResponseCodeConstant::OK,
+                'Data'         => $data_res,
+                'MessageNo'    => "",
+                'Message'      => "",
+                'DataErrors'   => []
+            ]);
+        }
+        catch (\Exception $e) {
+            //
+        }
+        return $response;
+    }
+}
